<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:coverflow="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/back"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tylerwhitlock.capstone_prototype.Prototype_Post_Translation_Response"
    tools:showIn="@layout/activity_prototype__post__translation__response">

<LinearLayout
    android:orientation="vertical"
    android:background="@drawable/linearlayout_bg_light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/initial_string_view"
        android:text="@string/example_string"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000" />


    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/translation_layout">

        <it.moondroid.coverflow.components.ui.containers.FeatureCoverFlow
            android:id="@+id/coverflow"
            coverflow:coverHeight="300dip"
            coverflow:coverWidth="300dip"
            coverflow:maxScaleFactor="1.5"
            coverflow:reflectionGap="0px"
            coverflow:rotationThreshold="0.5"
            coverflow:scalingThreshold="0.5"
            coverflow:spacing="0.6"
            android:layout_width="match_parent"
            android:layout_height="300dip" />



    </LinearLayout>


</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:id="@+id/button"
        android:text="@string/translate_more"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp" />
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:layout_margin="10dp"
    android:layout_above="@+id/button">
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/full_scrn"
        android:onClick="has_Suggested_Translation"/>
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:layout_marginRight="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/is_Incorrect"
        android:onClick="translation_Incorrect"/>
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:layout_marginRight="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/_Other"
        android:onClick="other_Thing"/>
</LinearLayout>
</RelativeLayout>
