<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Prototype_Translation_Activity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/txtText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:text="@string/_enter_phrase"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/entered_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sample_2"
            android:padding="10dp"/>
        <ImageButton
            android:id="@+id/speak_Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/speek"
            android:src="@android:drawable/ic_btn_speak_now"
            android:padding="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="60dp"
            android:text="@string/_translate_phrase"
            android:onClick="getTranslation"
            />

    </LinearLayout>




</android.support.design.widget.CoordinatorLayout>