<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_prototype__entrance__point"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:padding="30dp"
        android:gravity="center"
        android:background="@drawable/linearlayout_bg">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:text="@string/_translate"
            android:background="@drawable/button_default_bg"
            style="@style/DefaultButtonText"
            android:onClick="goToTranslateActivity"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:padding="2dp"
            android:layout_margin="2dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_default_bg"
            android:text="@string/_saved_Translations"
            style="@style/DefaultButtonText"
            android:onClick="goToViewSavedTranslationsActivity"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:padding="2dp"
            android:layout_margin="2dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_default_bg"
            android:text="@string/_save_Phrase"
            style="@style/DefaultButtonText"
            android:onClick="goToSaveTranslationActivity"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:padding="2dp"
            android:layout_margin="2dp"/>


    </LinearLayout>
</RelativeLayout>
